HiloTest -- rounding seems to be working.